--- a/scss/abstract/_maps.scss
+++ b/scss/abstract/_maps.scss
@@ -3,12 +3,10 @@
 /*Colores de la página*/
 
 $colors: (
-  "rosado": #e7d3cb, 
+  "rosado": #c09e90, 
   "terracota":rgba(175, 77, 60, 0.55),
   "negro": black,
   "rosa-viejo": #573D33,
-  "lila": #EDE6E9,
-  
-);
+)
 
 
