--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -1,12 +1,17 @@
+#body-contacto{
+    @extend %background;
+}
+
+
 /*Boton ENVIAR*/
 
-/*Fuente*/
+/*Fuente BS*/
 .modifica-font{
     font-family: 'Tajawal', sans-serif;
     font-weight:bold ;
 }
 
-/*Color de fondo*/
+/*Color de fondo BS */
 .color-boton{
     background-color: map-get($colors, terracota );
     border: map-get($colors, rosa-viejo ) solid 1.5px;
@@ -14,11 +19,26 @@
     
 }
 
-/*Hover*/
+/*Hover BS*/
 .animacion-boton a:hover{
     background-color: transparent !important;
     font-weight: bold;
-  
-
  }
 
+#contacto-main{
+  
+        iframe{
+            width: 40%;
+        }
+        
+}
+
+.mapa-contacto{
+    margin: 20px;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+        h3{
+            margin: 15px;
+        }
+}
