--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -5,9 +5,10 @@
     color: black;
     text-align: center;
     font-family: 'Tajawal', sans-serif;
-    font-size: 40px;
+    font-size: 4em;
     margin: 50px;
-    font-size: 70px;
+    
+
 }
 
 
