--- a/scss/componentes/_index.scss
+++ b/scss/componentes/_index.scss
@@ -1,73 +1,73 @@
-
 /*Body Index, Background*/
 
 #index-body{
-  
-    background: url("../img/background05.jpg");
-    background-color: map-get($colors , rosa-viejo );
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    
-    @media (max-width:576px)
-    {
-      width: 100%;
+  background: url("../img/wallpaper.jpeg");
+  background-color: map-get($colors , lila );
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+  width: 100vw;
+ 
+
+
+    /*Grid Index*/
+    #index-main-container{
+     
+      margin: 3% ;
+      display: grid;
+      grid-auto-columns: 1fr ;
+      grid-template-rows: auto;
+      grid-template-areas:
+      "index-main-title"
+      "index-paragraph"
+      "ir_tienda";
+      gap: 25px;
     }
+    section{
+      margin: 1%;
+    }
+    
+    
 }
 
-/*Grid Index*/
-#index-main-container{
-  
-  margin: 3% ;
-  display: grid;
-  grid-auto-columns: repeat (auto-fit, minmax(200px, 1fr)) ;
-  // grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-  "index-main-title"
-  "index-paragraph"
-  "ir_tienda";
-  gap: 25px;
-   
-    }
-
-  
-
-
+/*áreas Grid*/
 .index-main-title{
     grid-area:index-main-title;
     justify-self:center;
     align-self:center;
-
-    @media (max-width:576px){
-      width: 90%;
-      text-align: center;
-    }
-        h1{
-            font-size: nth($size, 4 );
-            font-family: 'Tajawal', sans-serif;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-    
-        
+    h1{
+      font-size: 3em;}
+      
 }
 
 .index-paragraph{
     grid-area: index-paragraph;
-    width: 800px;
+    width: 80%;
     justify-self: center;
-    color: black;
+    color: map-get($colors, negro ) ;
+    font-size: 1.2em;
+    font-family: 'Mandali', sans-serif;
+    text-shadow:0.5px 0.5px 0.5px black;
+    
+  
+   
+    
+    
+    
+    
+    border-radius: 15px;
     
 
-    @media (max-width:576px)
+     @media (max-width:576px)
         
     {
       width:90%;
       justify-content: center;
     }
         p{
-            text-align: center;
-                font-size: nth($size, 1 );
+          text-align: center;
+                font-size: 1.2em;
         }
         }
 
@@ -84,12 +84,11 @@
           text-decoration: none;
           color: map-get($colors, negro );
           text-shadow: 2px 1px 1px #a35f1b;
+          font-size: 1.5em;
           
         }
 }
       
-
- 
 
 
 /* BOTON Robado */
@@ -183,33 +182,5 @@
     width: 100%;
   }
 
-/*Footer Index*/
+ /*Footer index*/
 
-.redes{
-    text-align: center;
-    @media (max-width:576px)
-    {
-      width: 90%;
-      justify-content: center;
-      font-size: 20px;
-    }
-      li{
-            display: inline;
-            padding: 20px;
-            text-align: center;
-            font-family: 'MonteCarlo', cursive;
-            font-size: 30px;
-            color:black
-        }
-        a{
-          text-decoration: none;
-          color: map-get($colors, negro );
-          text-shadow: 2px 1px 1px #a35f1b;
-        }            
-}
-                
-              
-            
-
-
-              
